Severity	id		Headline							Build

5-Enhancement	JG200000478	Boxcontrol: OSD Screenshot: Support for dboxshot		R2.0.0
5-Enhancement	JG200000480	Boxcontrol: Control: Live lock / unlock	R2.0.0
5-Enhancement	JG200000482	Boxcontrol: Control: new: Standby Status			R2.0.0
5-Enhancement	JG200000483	EPG: Link to IMDB						R2.0.0
5-Enhancement	JG200000498	Boxcontrol: add SPTS Status					R2.0.0
5-Enhancement	JG200000497	Boxcontrol: New RC-Imake: Nokia-Remote				R2.0.0
5-Enhancement	JG200000494	Boxcontrol: Control: Add optical Output on/off/status		R2.0.0
4-Minor		JG200000392	GUI: initialize Volumen correctly ..				R2.0.0
5-Enhancement	JG200000331	GUI: all Pages W3C XHTML 1.0 conform ..				R2.0.0
5-Enhancement	JG200000465	GUI: new volumen control					R2.0.0
5-Enhancement	JG200000459	GUI: new yWeb 2.0 Layout					R2.0.0
5-Enhancement	JG200000254	GUI: Show channel-logos (if mounted)				R2.0.0
5-Enhancement	JG200000455	GUI: Help: New Item to Wiki					R2.0.0
5-Enhancement	JG200000449	GUI: show actual time in main menu				R2.0.0
5-Enhancement	JG200000439	GUI: show custom text in Menue to identify box (if you have several boxes)	R2.0.0
5-Enhancement	JG200000468	Info: add external Links for getting help			R2.0.0
5-Enhancement	JG200000473	Live: Radio-Streaming with VLC (0.8.5) New!			R2.0.0
5-Enhancement	JG200000500	Live: Transcode: own dialogue and more settings			R2.0.0
5-Enhancement	JG200000464	Live: Mini EPG for actual channel				R2.0.0
5-Enhancement	JG200000484	Live: dont show bouquet if set to hidden			R2.0.0
5-Enhancement	JG200000408	Live: deinterlace & http-caching				R2.0.0
5-Enhancement	JG200000492	Live: Set Timer from Mini EPG					R2.0.0
5-Enhancement	JG200000457	Record: Transcode while recording				R2.0.0
5-Enhancement	JG200000443	Record: new option: display off					R2.0.0
5-Enhancement	JG200000458	Record: add Profiles for transcoding (iPodVideo, custom...)	R2.0.0
5-Enhancement	JG200000474	Record: Radio-Recording & Transcoding (VLC) to mp3, iPod, custom	R2.0.0