@@ -1,4 +1,5 @@
 {=include-block:Y_Blocks.txt;head=}
+<script type="text/javascript" src="/Y_Baselib.js"></script>
 </head>
 <body>
 <table border="0">
